Implemented the index manager factory.